--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,13 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=telemetria_db;user=root;password=root;"
-  } 
+    "DefaultConnection": "server=db;port=3306;database=telemetria_db;user=root;password=root;"
+  },
+
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
 }
